Fixed bug on zxuno changing video ram 5/7 when paging was disabled by bit DI7FFD
Fixed average cpu statistics when footer is not enabled
Fixed kempston mouse emulation on Next machine: wheel bits always return 0
Fixed bug extracting PAWS words when a word is a pronoun
Fixed undocumented opcode ED76: I had IM0 but it's IM1
Fixed loading and saving +3 .z80 snapshots



Version 8.0. 19 July 2019 - World Destruction edition

Improved menu interface:
-Program Window can be extended horizontally and have a right region to place menu zxvision windows (called ZX Desktop)
-Draw engine: now it allows transparency
-Menu windows can be placed and resized to the whole program window
-Some windows geometry (position, size) are saved in the configuration
-Hotkeys now show right capitalization (lowercase or uppercase)
-Edit box now has a key to delete all input (cursor down)
-Edit box can now move cursor left and right and write text in the middle
-Enabling kempston mouse no longer disables mouse on menu
-GUI color bars depend on current style
-Added support for more cyrillic characters on menu
-Added RetroMac Gui Style
-Improved memory zone selector
-Improved footer:
--Footer now completely follows GUI Style
--Reordered cpu use, numbers in red when cpu use > 85%
--Now shows cpu temperature on Linux (and not only on Raspbian as before)

Added Real time playback from AY Chip sound to external MIDI device
Added menu to export AY chip music to midi (.mid) file
Added AY Sheet: showing a sheet with the notes being played
Added AY mixer menu
Added ZXUno UART Bridge emulation
Added TSConf UART Bridge emulation

Added DAAD, PAWS and Quill debugger, for Spectrum and CPC (CPC only supports Daad debugger)
Added text adventure keyboard also on CPC

Added colors to ncurses driver and Chloe machine
Added Chloe MMU to ZX-Uno
Added Derby+ and Derby++ roms

Added hdf to ide/mmc raw converter
Added hdf support to MMC emulation

Added ZRCP commands: ayplayer, cpu-transaction-log

